--- a/styles.css
+++ b/styles.css
@@ -60,3 +60,10 @@ table {
           box-sizing: border-box;
 }
 
+.container{
+    margin: 0 auto;
+    padding-left: 30px;
+    padding-right: 30px;
+    width:960px;
+}
+
