--- a/styles.css
+++ b/styles.css
@@ -67,3 +67,14 @@ table {
     width:960px;
 }
 
+/*
+  ========================================
+  Typography
+  ========================================
+*/
+
+h1, h3, h4, h5, p {
+  margin-bottom: 22px;
+}
+
+
