--- a/styles.css
+++ b/styles.css
@@ -123,3 +123,13 @@ h1, h3, h4, h5, p {
 .hero {
   padding: 22px 80px 66px 80px;
 }
+
+/*
+  ========================================
+  Primary header
+  ========================================
+*/
+
+.logo {
+  float: left;
+}
